config/clusters/microk8s-example/spec-cluster.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: co-specific-local
  labels:
    owner: cloud-ops
