config/clusters/microk8s-example/post-crd.yaml
kind: Service
apiVersion: v1
metadata:
  name: co-prometheus-kube-prometh-nginx-ingress
  namespace: co-ingress
  labels:
    app: ingress-nginx
    release: co-prometheus
spec:
  selector:
    app.kubernetes.io/name: ingress-nginx
  ports:
  - name: metrics
    port: 10254
---
kind: Service
apiVersion: v1
metadata:
  name: co-prometheus-kube-prometh-nginx-ingress
  namespace: co-ingress-internal
  labels:
    app: ingress-nginx
    release: co-prometheus
spec:
  selector:
    app.kubernetes.io/name: ingress-nginx
  ports:
  - name: metrics
    port: 10254
